force-app/main/default/objects/LAD_Supersession_Data_event__e/LAD_Supersession_Data_event__e.object-meta.xml
<CustomObject>
    <label>Supersession Data Event</label>
    <pluralLabel>Supersession Data Event</pluralLabel>
</CustomObject>