force-app/main/default/objects/LAD_Supersession_Data_event__e/fields/LAD_Code_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>LAD_Code_Change_Date__c</fullName>
    <label>Code Change Date</label>
    <type>Date</type>
</CustomField>