force-app/main/default/objects/LAD_Supersession_Data_event__e/fields/LAD_New_Sales_Code__c.field-meta.xml
<CustomField>
    <fullName>LAD_New_Sales_Code__c</fullName>
    <label>New Sales Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>