force-app/main/default/objects/LAD_Supersession_Data_event__e/fields/LAD_Old_Stock_Code__c.field-meta.xml
<CustomField>
    <fullName>LAD_Old_Stock_Code__c</fullName>
    <label>Old Stock Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>