force-app/main/default/objects/LAD_Supersession_Data_event__e/fields/LAD_Product__c.field-meta.xml
<CustomField>
    <fullName>LAD_Product__c</fullName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>